# Browser

./: .gitignore  Cargo.toml  LICENSE  README.md  chat-export-1771714578997.md  chat-export-1771714593841.md  justfile
.codex/environments/: environment.toml
.github/workflows/: ci.yml
crates/app/: Cargo.toml  build.rs
crates/app/src/: ffi.rs  main.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/engine_loop/: Cargo.toml
crates/engine_loop/src/: lib.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: lib.rs
crates/platform_abi/: Cargo.toml
crates/platform_abi/src/: lib.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: lib.rs
crates/script_host/: Cargo.toml
crates/script_host/src/: lib.rs
crates/tracing/: Cargo.toml
crates/tracing-subscriber/: Cargo.toml
crates/tracing-subscriber/src/: lib.rs
crates/tracing/src/: lib.rs
docs/: abi.md  ipc-schema.md  testing.md
include/: platform.h
tests/fixtures/: basic.html  detailed.html  script.html
tests/golden/: README.md  basic.hash  script.hash
tests/golden/cases/: test-pattern-f0-64x64.json
tests/golden/expected/: basic.rgba  basic.sha256  script.json  script.rgba  script.sha256
tools/py/: ipc_codegen.py  ipc_schema.json  run.py
zig/platform/: build.zig
zig/platform/.zig-cache/o/5b017a7b6b42846ad44e712ad3125c06/: platform_symbols.txt
zig/platform/src/: platform_macos.m  platform_stub.c  platform_windows.c
