[workspace]
members = [
  "crates/app",
  "crates/engine_loop",
  "crates/platform_abi",
  "crates/renderer",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
engine_loop = { path = "crates/engine_loop" }
platform_abi = { path = "crates/platform_abi" }
renderer = { path = "crates/renderer" }
