[package]
name = "tessera"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
engine_loop.workspace = true
platform_abi.workspace = true
renderer.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
