[package]
name = "browser"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[features]
default = []
process-split = ["ipc"]

[dependencies]
engine.workspace = true
engine_loop.workspace = true
ipc = { workspace = true, optional = true }
platform_abi.workspace = true
renderer.workspace = true
script_host.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[build-dependencies]
